[gd_scene load_steps=3 format=3 uid="uid://d15c3tl2uvrap"]

[ext_resource type="Texture2D" uid="uid://3levxoui376j" path="res://splash-screen.png" id="1_0h2ip"]
[ext_resource type="Script" path="res://scenes/mainmenu.gd" id="1_2usw2"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2usw2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 648.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("1_0h2ip")
expand_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/TextureRect"]
layout_mode = 0
offset_top = 298.0
offset_right = 1151.0
offset_bottom = 647.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TextureRect/CenterContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/TextureRect/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.321569, 0.533333, 0.521569, 1)
theme_override_colors/font_focus_color = Color(0.196078, 0.678431, 0.396078, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Start"
flat = true
icon_alignment = 1
expand_icon = true

[node name="QuitButton" type="Button" parent="MarginContainer/TextureRect/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.321569, 0.533333, 0.521569, 1)
theme_override_colors/font_focus_color = Color(0.196078, 0.678431, 0.396078, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Quit"
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="MarginContainer/TextureRect/CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/TextureRect/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
